--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -13,6 +13,9 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Vendorize GLightbox
+        run: make vendor
+
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
