--- a/config.yaml.example
+++ b/config.yaml.example
@@ -1,5 +1,6 @@
 title: "go-gallery"
 url: https://photos.example.org
+#cover_url: https://example.org/cover.png <- override the default cover
 bg_color: "#1b1c1d"
 font_color: "white"
 border: "3px"
